fixed map alignment

--- a/_sass/aarontr/layouts/_home-page.scss
+++ b/_sass/aarontr/layouts/_home-page.scss
@@ -153,15 +153,12 @@
         flex-wrap: wrap;
 
         .where-location{
-            flex-basis: 40%;
+            flex-basis: 80%;
             align-content: center;
             align-items: center;
             display: flex;
-
-            @include media-query($small-width){
-                flex-basis: 100%;
-                margin-top: 25px;
-            }
+            margin: auto;
+            margin-top: 25px;
 
             .location-wrapper{
                 align-self: center;
@@ -184,13 +181,12 @@
         }
 
         #where_am_i_map{
-            flex-basis: 60%;
-            height: 350px;
+            flex-basis: 75%;
             width: 100%;
             margin: auto;
 
             @include media-query($small-width){
-                flex-basis: 100%;
+                height: 350px;
             }
         }
     }
